--- a/package.json
+++ b/package.json
@@ -1,46 +1,35 @@
 {
-  "name": "react-pure-tap",
-  "version": "0.0.1",
-  "description": "React pure tap",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "babel src.jsx --out-file index.js",
-    "compile-example": "babel example/src.jsx --out-file example/index.js",
-    "prepublish": "npm run-script compile"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cheunghy/react-pure-tap.git"
-  },
-  "keywords": [
-    "button",
-    "ui",
-    "component",
-    "react",
-    "react-component"
-  ],
-  "author": "Zhang Kai Yu <yeannylam@gmail.com> (http://www.cheunghoiyu.com/)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/cheunghy/react-pure-tap/issues"
-  },
-  "homepage": "https://github.com/cheunghy/react-pure-tap#readme",
-  "devDependencies": {
-    "babel-cli": "^6.4.5",
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-register": "^6.4.3",
-    "react-dom": "^0.14.7",
-    "webpack": "^1.12.12"
-  },
-  "peerDependencies": {
-    "react": "^0.14.0"
-  },
-  "dependencies": {
-    "classnames": "^2.2.3"
-  }
+    "name": "react-pure-tap",
+    "version": "0.1.0",
+    "description": "React pure tap",
+    "main": "lib/index.js",
+    "types": "lib/index.d.ts",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "prepublish": "npx tsc"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/victorteokw/react-pure-tap.git"
+    },
+    "keywords": [
+        "button",
+        "ui",
+        "component",
+        "react",
+        "react-component"
+    ],
+    "author": "Victor Teo <victor.teo@fillmula.com>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/victorteokw/react-pure-tap/issues"
+    },
+    "homepage": "https://github.com/victorteokw/react-pure-tap#readme",
+    "peerDependencies": {
+        "react": "^17.0.2"
+    },
+    "devDependencies": {
+        "@types/react": "^17.0.15",
+        "typescript": "^4.3.5"
+    }
 }
